// message.proto
syntax = "proto3";

option java_package = "io.nuwe.technical.api.lib";
option java_outer_classname = "MessageProto";

package MessageProto;

// TODO: TASK 2

// Request payload
message MessageFromToRequest {
    int64 userSenderId = 1;
    int64 userReceiverId = 2;
}

message MessageUserRequest {
    int64 userId = 1;
}

// Response payload
message MessageGrpc {
    int64 id = 1;
    int64 userSenderId = 2;
    int64 userReceiverId = 3;
    string body = 4;
    string sentAt = 5;
}

message MessageResponse {
    repeated MessageGrpc messages = 1;
}

service MessageService {
  // Gets all the messages sent from (userSenderId) to (userReceiverId)
    rpc getMessagesFromTo (MessageFromToRequest) returns (MessageResponse) {}

  // Gets all the messages received by (userReceiverId)
    rpc getMessagesReceivedFrom (MessageUserRequest) returns (MessageResponse) {}

  // Gets all the messages sent by (userSenderId)
    rpc getMessagesSentFrom (MessageUserRequest) returns (MessageResponse) {}


}
